--- a/WEB/Front/illust_customer/src/App.css
+++ b/WEB/Front/illust_customer/src/App.css
@@ -1,6 +1,12 @@
 @import url(https://fonts.googleapis.com/css?family=Cabin:400,700|Source+Sans+Pro:400,700);
 @import url(https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css);
 
+
+.clicked {
+	border: 1px solid red;
+	color: white;
+}
+
 html {
 font-family:sans-serif;
 -ms-text-size-adjust:100%;
