--- a/WEB/Front/Home/src/Theme4.css
+++ b/WEB/Front/Home/src/Theme4.css
@@ -1444,11 +1444,13 @@ output {
 }
 .form-control,output {
 	display:block;
+	resize:none;
 	font-size:11px;
 	line-height:1.78;
 	color:#555
 }
 .form-control {
+	resize:none;
 	width:100%;
 	height:40px;
 	padding:8px 14px;
@@ -1463,6 +1465,7 @@ output {
 	transition:border-color .15s ease-in-out,box-shadow .15s ease-in-out
 }
 .form-control:focus {
+	resize:none;
 	border-color:#66afe9;
 	-webkit-box-shadow:inset 0 1px 1px rgba(0,0,0,.075),0 0 8px rgba(102,175,233,.6);
 	box-shadow:inset 0 1px 1px rgba(0,0,0,.075),0 0 8px rgba(102,175,233,.6)
